force-app/main/default/objects/CLO_Asset_Details__c/CLO_Asset_Details__c.object-meta.xml
<CustomObject>
    <label>CLO Asset Details</label>
    <nameField>
        <label>CLO Asset Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CLO Asset Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>