force-app/main/default/objects/CLO_Asset_Details__c/fields/Amortization_Term__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Term__c</fullName>
    <label>Amortization Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 months</fullName>
            </value>
            <value>
                <fullName>120 months</fullName>
            </value>
            <value>
                <fullName>180 months</fullName>
            </value>
            <value>
                <fullName>240 months</fullName>
            </value>
            <value>
                <fullName>300 months</fullName>
            </value>
            <value>
                <fullName>360 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>