force-app/main/default/objects/CLO_Asset_Details__c/fields/Appraisal_As_Is_NCF__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_As_Is_NCF__c</fullName>
    <description>Formula field that pulls in the Appraised As Is Value (Appraisal__c.Appraised_Value_Amount__c) from the related appraisal</description>
    <formula>Appraisal__r.Appraised_Value_Amount__c</formula>
    <label>Appraisal As-Is NCF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>