force-app/main/default/objects/CLO_Asset_Details__c/fields/Appraisal_Stabilized_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Stabilized_Occupancy__c</fullName>
    <label>Appraisal Stabilized Occupancy %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>