force-app/main/default/objects/CLO_Asset_Details__c/fields/Assumed_Loan__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Loan__c</fullName>
    <label>Assumed Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>