force-app/main/default/objects/CLO_Asset_Details__c/fields/Borrower_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Business Entity object, matches to the Opportunity.Borrower_Entity__c which does the same</description>
    <label>Borrower Name</label>
    <referenceTo>Business_Entity__c</referenceTo>
    <relationshipLabel>CLO Asset Details</relationshipLabel>
    <relationshipName>CLO_Asset_Details</relationshipName>
    <type>Lookup</type>
</CustomField>