force-app/main/default/objects/CLO_Asset_Details__c/fields/Cash_Management_Springing_In_place__c.field-meta.xml
<CustomField>
    <fullName>Cash_Management_Springing_In_place__c</fullName>
    <label>Cash Management (Springing/In-place)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>