force-app/main/default/objects/CLO_Asset_Details__c/fields/Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID__c</fullName>
    <label>Deal ID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CLO Asset Details</relationshipLabel>
    <relationshipName>CLO_Asset_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>