force-app/main/default/objects/CLO_Asset_Details__c/fields/Deal_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Loan_Number__c</fullName>
    <description>Matches to Opportunity.Deal_Loan_Number__c</description>
    <label>Deal Loan Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>