force-app/main/default/objects/CLO_Asset_Details__c/fields/Engineering_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Report_Date__c</fullName>
    <label>Engineering Report Date</label>
    <type>Date</type>
</CustomField>