force-app/main/default/objects/CLO_Asset_Details__c/fields/Environmental_Report_Date_Phase_2__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Report_Date_Phase_2__c</fullName>
    <label>Environmental Report Date (Phase 2)</label>
    <type>Date</type>
</CustomField>