force-app/main/default/objects/CLO_Asset_Details__c/fields/Exit_Fee__c.field-meta.xml
<CustomField>
    <fullName>Exit_Fee__c</fullName>
    <description>Matches to Opportunity.Exit_Fee__c</description>
    <label>Exit Fee %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>