force-app/main/default/objects/CLO_Asset_Details__c/fields/Exit_Fee_Balance__c.field-meta.xml
<CustomField>
    <fullName>Exit_Fee_Balance__c</fullName>
    <label>Exit Fee Balance</label>
    <type>TextArea</type>
</CustomField>