force-app/main/default/objects/CLO_Asset_Details__c/fields/Extension_Options_Description__c.field-meta.xml
<CustomField>
    <fullName>Extension_Options_Description__c</fullName>
    <label>Extension Options Description</label>
    <type>TextArea</type>
</CustomField>