force-app/main/default/objects/CLO_Asset_Details__c/fields/First_Extension_Option_Description__c.field-meta.xml
<CustomField>
    <fullName>First_Extension_Option_Description__c</fullName>
    <label>1st Extension Option Description</label>
    <type>TextArea</type>
</CustomField>