force-app/main/default/objects/CLO_Asset_Details__c/fields/First_Extension_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>First_Extension_Period_Months__c</fullName>
    <label>First Extension Period (Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>