force-app/main/default/objects/CLO_Asset_Details__c/fields/Fully_Extended_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Fully_Extended_Maturity_Date__c</fullName>
    <label>Fully Extended Maturity Date</label>
    <type>Date</type>
</CustomField>