force-app/main/default/objects/CLO_Asset_Details__c/fields/Fully_Funded_Mortgage_Loan_Margin__c.field-meta.xml
<CustomField>
    <fullName>Fully_Funded_Mortgage_Loan_Margin__c</fullName>
    <label>Fully Funded Mortgage Loan Margin %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>