force-app/main/default/objects/CLO_Asset_Details__c/fields/Index_for_Floating_Rate__c.field-meta.xml
<CustomField>
    <fullName>Index_for_Floating_Rate__c</fullName>
    <description>Matches to Opportunity.Index__c</description>
    <label>Index for Floating Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1M Term SOFR</fullName>
            </value>
            <value>
                <fullName>3M Term SOFR</fullName>
            </value>
            <value>
                <fullName>6M Term SOFR</fullName>
            </value>
            <value>
                <fullName>1Y Term SOFR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>