force-app/main/default/objects/CLO_Asset_Details__c/fields/Initial_Funded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Funded_Amount__c</fullName>
    <label>Initial Funded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>