force-app/main/default/objects/CLO_Asset_Details__c/fields/Initial_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Maturity_Date__c</fullName>
    <label>Initial Maturity Date</label>
    <type>Date</type>
</CustomField>