force-app/main/default/objects/CLO_Asset_Details__c/fields/Interest_Accrual_Basis__c.field-meta.xml
<CustomField>
    <fullName>Interest_Accrual_Basis__c</fullName>
    <label>Interest Accrual Basis</label>
    <length>20</length>
    <type>Text</type>
</CustomField>