force-app/main/default/objects/CLO_Asset_Details__c/fields/Interest_Rate_Cap_Provider_Rating__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Cap_Provider_Rating__c</fullName>
    <label>Interest Rate Cap Provider Rating</label>
    <length>20</length>
    <type>Text</type>
</CustomField>