force-app/main/default/objects/CLO_Asset_Details__c/fields/Interest_Rate_Cap_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Cap_Reserve__c</fullName>
    <label>UW Monthly Interest Rate Cap Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>