force-app/main/default/objects/CLO_Asset_Details__c/fields/Interest_Rate_Protection_Cap_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Protection_Cap_Expiration__c</fullName>
    <label>Interest Rate Protection Cap Expiration</label>
    <type>Date</type>
</CustomField>