force-app/main/default/objects/CLO_Asset_Details__c/fields/Interest_Rate_Protection_Cap_Provider__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Protection_Cap_Provider__c</fullName>
    <label>Interest Rate Protection Cap Provider</label>
    <type>TextArea</type>
</CustomField>