force-app/main/default/objects/CLO_Asset_Details__c/fields/Interest_Rate_Protection_Cap_Stri__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Protection_Cap_Stri__c</fullName>
    <label>Interest Rate Cap Strike Price %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>