force-app/main/default/objects/CLO_Asset_Details__c/fields/IO_Months_Through_Fully_Extended_Term__c.field-meta.xml
<CustomField>
    <fullName>IO_Months_Through_Fully_Extended_Term__c</fullName>
    <description>IO Number of Months through Fully Extended Loan Term. Calculation done on the CLO Data Tape.</description>
    <inlineHelpText>IO Number of Months through Fully Extended Loan Term</inlineHelpText>
    <label>IO Months Through Fully Extended Term</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>