force-app/main/default/objects/CLO_Asset_Details__c/fields/Loan_Commitment_Original_Balance__c.field-meta.xml
<CustomField>
    <fullName>Loan_Commitment_Original_Balance__c</fullName>
    <description>Matches to Opportunity.LOC_Commitment__c</description>
    <label>Loan Commitment Original Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>