force-app/main/default/objects/CLO_Asset_Details__c/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <description>Matches to Opportunity.Loan_Purpose__c</description>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Refinance/Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>