force-app/main/default/objects/CLO_Asset_Details__c/fields/Mortgage_Loan_Cut_off_Date_As_Is_LTV__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Loan_Cut_off_Date_As_Is_LTV__c</fullName>
    <label>Mortgage Loan Cut-off Date (As-Is) LTV</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>