force-app/main/default/objects/CLO_Asset_Details__c/fields/Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units__c</fullName>
    <label># of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>