force-app/main/default/objects/CLO_Asset_Details__c/fields/Occupancy_Pct__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Pct__c</fullName>
    <label>Occupancy %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>