force-app/main/default/objects/CLO_Asset_Details__c/fields/Occupancy_Source_Date__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Source_Date__c</fullName>
    <label>Occupancy Source Date</label>
    <type>Date</type>
</CustomField>