force-app/main/default/objects/CLO_Asset_Details__c/fields/Original_Prepayment_Provision__c.field-meta.xml
<CustomField>
    <fullName>Original_Prepayment_Provision__c</fullName>
    <label>Original Prepayment Provision</label>
    <length>10</length>
    <type>Text</type>
</CustomField>