force-app/main/default/objects/CLO_Asset_Details__c/fields/Partial_Release_and_or_Prepayment__c.field-meta.xml
<CustomField>
    <fullName>Partial_Release_and_or_Prepayment__c</fullName>
    <label>Partial Release and/or Prepayment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>