force-app/main/default/objects/CLO_Asset_Details__c/fields/Partial_Release_and_or_Prepayment_Desc__c.field-meta.xml
<CustomField>
    <fullName>Partial_Release_and_or_Prepayment_Desc__c</fullName>
    <label>Partial Release and/or Prepayment Desc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>