force-app/main/default/objects/CLO_Asset_Details__c/fields/Principals_Individuals__c.field-meta.xml
<CustomField>
    <fullName>Principals_Individuals__c</fullName>
    <label>Principals (Individuals)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>