force-app/main/default/objects/CLO_Asset_Details__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <label>Property Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>