force-app/main/default/objects/CLO_Asset_Details__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2-4 Unit</fullName>
            </value>
            <value>
                <fullName>Attached</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Condo</fullName>
            </value>
            <value>
                <fullName>Detached</fullName>
            </value>
            <value>
                <fullName>Land/Lot</fullName>
            </value>
            <value>
                <fullName>Manufactured Housing</fullName>
            </value>
            <value>
                <fullName>Mixed Use</fullName>
            </value>
            <value>
                <fullName>Modular</fullName>
            </value>
            <value>
                <fullName>Multifamily</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PUD</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>SFR</fullName>
            </value>
            <value>
                <fullName>Townhome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>