force-app/main/default/objects/CLO_Asset_Details__c/fields/Property_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code__c</fullName>
    <label>Property Zip Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>