force-app/main/default/objects/CLO_Asset_Details__c/fields/Recourse__c.field-meta.xml
<CustomField>
    <fullName>Recourse__c</fullName>
    <description>Matches to Opportunity.Recourse__c</description>
    <label>Recourse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recourse</fullName>
            </value>
            <value>
                <fullName>Non-Recourse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>