force-app/main/default/objects/CLO_Asset_Details__c/fields/Related_Property__c.field-meta.xml
<CustomField>
    <fullName>Related_Property__c</fullName>
    <description>Master-detail relationship field to the property record that triggered this CLO Asset Detail record</description>
    <label>Related Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>CLO Asset Details</relationshipLabel>
    <relationshipName>CLO_Asset_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>