force-app/main/default/objects/CLO_Asset_Details__c/fields/Reserve_Cap_Ex__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Cap_Ex__c</fullName>
    <label>UW Monthly Reserve Cap Ex Escrow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>