force-app/main/default/objects/CLO_Asset_Details__c/fields/Reserve_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Insurance__c</fullName>
    <label>Reserve Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>