force-app/main/default/objects/CLO_Asset_Details__c/fields/Reserve_Tax__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Tax__c</fullName>
    <label>UW Monthly Reserve Tax Escrow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>