force-app/main/default/objects/CLO_Asset_Details__c/fields/Second_Extension_Floor__c.field-meta.xml
<CustomField>
    <fullName>Second_Extension_Floor__c</fullName>
    <label>Second Extension Floor</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>