force-app/main/default/objects/CLO_Asset_Details__c/fields/Second_Extension_Option_Description__c.field-meta.xml
<CustomField>
    <fullName>Second_Extension_Option_Description__c</fullName>
    <label>2nd Extension Option Description</label>
    <type>TextArea</type>
</CustomField>