force-app/main/default/objects/CLO_Asset_Details__c/fields/Seismic_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Seismic_Report_Date__c</fullName>
    <label>Seismic Report Date</label>
    <type>Date</type>
</CustomField>