force-app/main/default/objects/CLO_Asset_Details__c/fields/SOFR_Floor__c.field-meta.xml
<CustomField>
    <fullName>SOFR_Floor__c</fullName>
    <label>SOFR Floor %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>