force-app/main/default/objects/CLO_Asset_Details__c/fields/Type_of_Lockbox__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Lockbox__c</fullName>
    <label>Type of Lockbox</label>
    <length>100</length>
    <type>Text</type>
</CustomField>