force-app/main/default/objects/CLO_Asset_Details__c/fields/Underwritten_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Underwritten_Expenses__c</fullName>
    <label>Underwritten Expenses</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>