force-app/main/default/objects/CLO_Asset_Details__c/fields/Underwritten_NOI__c.field-meta.xml
<CustomField>
    <fullName>Underwritten_NOI__c</fullName>
    <label>Underwritten NOI</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>