force-app/main/default/objects/CLO_Asset_Details__c/fields/Upfront_Deferred_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Deferred_Maintenance__c</fullName>
    <label>Upfront Deferred Maintenance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>