force-app/main/default/objects/CLO_Asset_Details__c/fields/Upfront_Real_Estate_Tax_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Real_Estate_Tax_Reserves__c</fullName>
    <label>Upfront Real Estate Tax Reserves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>