force-app/main/default/objects/CLO_Asset_Details__c/fields/Year_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_Built__c</fullName>
    <label>Year Built</label>
    <length>20</length>
    <type>Text</type>
</CustomField>