force-app/main/default/objects/CLO_Asset_Details__c/fields/Year_Renovated__c.field-meta.xml
<CustomField>
    <fullName>Year_Renovated__c</fullName>
    <label>Year Renovated</label>
    <length>20</length>
    <type>Text</type>
</CustomField>