force-app/main/default/objects/CLO_Asset_Details__c/recordTypes/CLO_Asset_Details.recordType-meta.xml
<RecordType>
    <fullName>CLO_Asset_Details</fullName>
    <active>true</active>
    <label>CLO Asset Details</label>
</RecordType>