force-app/main/default/objects/CLO_Asset_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal_Name__c</columns>
    <columns>Deal_Loan_Number__c</columns>
    <columns>Property_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>